--- a/modules/projects/client/views/project-partials/project.schedule.milestone.edit.modal.html
+++ b/modules/projects/client/views/project-partials/project.schedule.milestone.edit.modal.html
@@ -1,47 +1,45 @@
 <div class="modal-header">
-  <h3 class="modal-title">Edit Milestone</h3>
+	<h3 class="modal-title">Edit Milestone</h3>
 </div>
 
 <form name="dataForm" ng-submit="save(dataForm.$valid)" novalidate>
 	<div class="modal-body">
-			<div class="form-group">
-				<div>Milestone: {{myData.data.name}}</div>
-			</div>
-			<div class="form-group has-error" ng-class="{'has-error': validateForm}">
-				<!-- <label>Date Range / Effective Date?</label> -->
-				<div class="date-range-control clearfix">
-					<div class="form-group">
-						<label class="control-label">Date Started Estimate</label>
-						<div class="input-group">
-								<p class="form-control-static">{{ myData.data.dateStartedEst | amDateFormat:'MMM Do YYYY' }} <a x-modal-date-picker x-selected-date="myData.data.dateStartedEst" >&nbsp;&nbsp;<i class="glyphicon glyphicon-calendar"></i></a>&nbsp; &nbsp;</p>
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="control-label">Date Completed Estimate</label>
-						<div class="input-group">
-								<p class="form-control-static">{{ myData.data.dateCompletedEst | amDateFormat:'MMM Do YYYY' }} <a x-modal-date-picker x-selected-date="myData.data.dateCompletedEst" >&nbsp;&nbsp;<i class="glyphicon glyphicon-calendar"></i></a>&nbsp; &nbsp;</p>
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="control-label">Date Started Actual</label>
-						<div class="input-group">
-								<p class="form-control-static">{{ myData.data.dateStarted | amDateFormat:'MMM Do YYYY' }} <a x-modal-date-picker x-selected-date="myData.data.dateStarted" >&nbsp;&nbsp;<i class="glyphicon glyphicon-calendar"></i></a>&nbsp; &nbsp;</p>
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="control-label">Date Completed Actual</label>
-						<div class="input-group">
-								<p class="form-control-static">{{ myData.data.dateCompleted | amDateFormat:'MMM Do YYYY' }} <a x-modal-date-picker x-selected-date="myData.data.dateCompleted" >&nbsp;&nbsp;<i class="glyphicon glyphicon-calendar"></i></a>&nbsp; &nbsp;</p>
-						</div>
+		<div class="form-group">
+			<div>Milestone: {{ milestone.name }}</div>
+		</div>
+		<div class="form-group has-error" ng-class="{'has-error': validateForm}">
+			<!-- <label>Date Range / Effective Date?</label> -->
+			<div class="date-range-control clearfix">
+				<div class="form-group">
+					<label class="control-label">Date Started Estimate</label>
+					<div class="input-group">
+							<p class="form-control-static">{{ milestone.dateStartedEst | amDateFormat:'MMM Do YYYY' }} <a x-modal-date-picker x-selected-date="milestone.dateStartedEst" >&nbsp;&nbsp;<i class="glyphicon glyphicon-calendar"></i></a>&nbsp; &nbsp;</p>
 					</div>
 				</div>
-				<!-- <div class="help-block">Invalid Date Range Message</div> -->
+				<div class="form-group">
+					<label class="control-label">Date Completed Estimate</label>
+					<div class="input-group">
+							<p class="form-control-static">{{ milestone.dateCompletedEst | amDateFormat:'MMM Do YYYY' }} <a x-modal-date-picker x-selected-date="milestone.dateCompletedEst" >&nbsp;&nbsp;<i class="glyphicon glyphicon-calendar"></i></a>&nbsp; &nbsp;</p>
+					</div>
+				</div>
+				<div class="form-group">
+					<label class="control-label">Date Started Actual</label>
+					<div class="input-group">
+							<p class="form-control-static">{{ milestone.dateStarted | amDateFormat:'MMM Do YYYY' }} <a x-modal-date-picker x-selected-date="milestone.dateStarted" >&nbsp;&nbsp;<i class="glyphicon glyphicon-calendar"></i></a>&nbsp; &nbsp;</p>
+					</div>
+				</div>
+				<div class="form-group">
+					<label class="control-label">Date Completed Actual</label>
+					<div class="input-group">
+							<p class="form-control-static">{{ milestone.dateCompleted | amDateFormat:'MMM Do YYYY' }} <a x-modal-date-picker x-selected-date="milestone.dateCompleted" >&nbsp;&nbsp;<i class="glyphicon glyphicon-calendar"></i></a>&nbsp; &nbsp;</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
 </form>
 
 <div class="modal-footer">
-  <button class="btn btn-default" type="button" ng-click="myData.cancel()">Cancel</button>
-  <button class="btn btn-primary" type="button" ng-click="myData.ok()">Save</button>
+	<button class="btn btn-default" type="button" ng-click="cancel()">Cancel</button>
+	<button class="btn btn-primary" type="button" ng-click="ok()">Save</button>
 </div>
