--- a/modules/vcs/client/views/vc-edit.html
+++ b/modules/vcs/client/views/vc-edit.html
@@ -2,15 +2,18 @@
 <div class="view-title-container flex-row">
 	<h1><span ng-show="project.name">Edit Valued Component &nbsp;&rsaquo;&nbsp; {{vc.title}}</h1>
 	<div class="actions">
-		<a class="btn btn-default btn-sm" 
+		<a class="btn btn-default btn-sm"
 			ui-sref="p.vc.list">Cancel</a>
 		<button class="btn btn-primary btn-sm"
 			ng-click="save()">Save</button>
-		<button class="btn btn-default btn-sm" 
+    <button class="btn btn-default btn-sm"
+            ng-if="canDelete"
+            ng-click="delete()">Delete</button>
+		<button class="btn btn-default btn-sm"
 			ng-if="canUnpublish"
 			ng-click="unpublish()">Unpublish</button>
-		<button class="btn btn-success btn-sm" 
-			ng-if="canPublish" 
+		<button class="btn btn-success btn-sm"
+			ng-if="canPublish"
 			ng-click="publish()">Publish</button>
 	</div>
 </div>
@@ -99,15 +102,15 @@
 
 	<div clas="form-footer">
 		<div class="pull-right">
-			<a class="btn btn-default btn-sm" 
+			<a class="btn btn-default btn-sm"
 				ui-sref="p.vc.list">Cancel</a>
 			<button class="btn btn-primary btn-sm"
 				ng-click="save()">Save</button>
-			<button class="btn btn-default btn-sm" 
+			<button class="btn btn-default btn-sm"
 				ng-if="canUnpublish"
 				ng-click="unpublish()">Unpublish</button>
-			<button class="btn btn-success btn-sm" 
-				ng-if="canPublish" 
+			<button class="btn btn-success btn-sm"
+				ng-if="canPublish"
 				ng-click="publish()">Publish</button>
 		</div>
 	</div>
