--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -2948,6 +2948,37 @@ form {
 }
 
 
+/* NOTIFICATIONS
+------------------------------ */ 
+.notify-modal {
+	width: 400px;
+	bottom: inherit;
+	left: calc(50% - 200px);
+
+	.modal-content {
+		border: none;
+	}
+
+	.modal-dialog {
+		width: calc(400px - 40px);
+	}
+
+	.modal-header {
+		@extend .flex-row;
+		padding: 0.5rem 1.5rem;
+	}
+
+	.notify-modal-msg {
+		@include flex(1 1 auto);
+		padding: 0.7rem 0;
+	}
+
+	.close {
+		font-weight: normal;
+	}
+}
+
+
 /* PANELS
 ------------------------------ */ 
 .panel-default {
