Fixing an issue with csslint and not including the microsoft prefix for the flex property

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -181,6 +181,7 @@ textarea {
 @mixin flex($values) {
 	-webkit-box-flex: $values;
   	   -moz-box-flex: $values;
+		-ms-box-flex: $values;
   	    -webkit-flex: $values;
   	        -ms-flex: $values;
   		        flex: $values; 
