--- a/modules/vcs/client/views/vc-edit.html
+++ b/modules/vcs/client/views/vc-edit.html
@@ -1,4 +1,5 @@
 
+
 <div class="view-title-container flex-row">
 	<h1><span ng-show="project.name">Edit Valued Component &nbsp;&rsaquo;&nbsp; {{vc.title}} <span class="placeholder-value" ng-if="!vc.title">{{vc.name}}</span></h1>
 	<div class="actions">
@@ -8,8 +9,7 @@
             ng-if="canDelete"
             ng-click="delete()"><span class="glyphicon glyphicon-remove"></span><span>Delete</span></button>
 		<button class="btn btn-primary btn-sm"
-			data-toggle="modal" 
-			data-target="#saveNotify">Save</button>
+			ng-click="save()">Save</button>
 		<button class="btn btn-default btn-sm" data-toggle="modal" data-target="#publishNotify"
 			ng-if="canUnpublish"
 			ng-click="unpublish()"><span class="glyphicon glyphicon-minus-sign"></span><span>Unpublish</span></button>
