--- a/modules/vcs/client/views/vc-modal-confirm-publish.html
+++ b/modules/vcs/client/views/vc-modal-confirm-publish.html
@@ -1,10 +1,10 @@
 <div class="modal-header">
 	<button class="btn btn-default close" ng-click="self.cancel()"><span aria-hidden="true">×</span></button>
-	<h3 class="modal-title">Publish {{vc.name}}</h3>
+	<h3 class="modal-title">Publish {{self.vc.name}}</h3>
 </div>
 
 <div class="modal-body">
-    Are you sure you want to publish {{vc.name}} for this project?
+    Are you sure you want to publish {{self.vc.name}} for this project?
 </div>
 
 <div class="modal-footer">
@@ -15,4 +15,3 @@
 		</button>
 	</div>
 </div>
-	
