--- a/modules/vcs/client/views/vc-modal-error.html
+++ b/modules/vcs/client/views/vc-modal-error.html
@@ -1,11 +1,15 @@
 <div class="modal-header">
 	<button class="btn btn-default close" ng-click="self.cancel()"><span aria-hidden="true">×</span></button>
-	<h3 class="modal-title">An error has occurred</h3>
+	<h3 class="modal-title">{{title}}</h3>
 </div>
 
 <div class="modal-body">
     An error has occurred while trying to process your request.
-	<!-- Need error messaging here -->
+	  <!-- Need error messaging here -->
+    <h3>{{self.msg}}</h3>
+    <ul ng-if="self.errors && self.errors.length > 0">
+      <li ng-repeat="x in self.errors">{{x.msg}}</li>
+    </ul>
 </div>
 
 <div class="modal-footer">
@@ -13,4 +17,3 @@
 		<button class="btn btn-danger" href ng-click="self.ok()">OK</button>
 	</div>
 </div>
-	
