--- a/modules/vcs/client/views/vc-modal-confirm-delete.html
+++ b/modules/vcs/client/views/vc-modal-confirm-delete.html
@@ -1,10 +1,10 @@
 <div class="modal-header">
 	<button class="btn btn-default close" ng-click="self.cancel()"><span aria-hidden="true">×</span></button>
-	<h3 class="modal-title">Delete {{self.vc.name}}</h3>
+	<h3 class="modal-title">Delete Valued Component</h3>
 </div>
 
 <div class="modal-body">
-    Are you sure you want to delete {{self.vc.name}} from this project?
+    Are you sure you want to delete "{{self.vc.name}}" from this project?
 </div>
 
 <div class="modal-footer">
