--- a/modules/vcs/client/views/vc-modal-success.html
+++ b/modules/vcs/client/views/vc-modal-success.html
@@ -9,6 +9,6 @@
 
 <div class="modal-footer">
 	<div>
-		<button class="btn btn-primary" href ng-click="self.ok()">OK</button>
+		<button class="btn btn-default" href ng-click="self.ok()">OK</button>
 	</div>
 </div>
