--- a/modules/vcs/client/views/vc-modal-error.html
+++ b/modules/vcs/client/views/vc-modal-error.html
@@ -14,6 +14,6 @@
 
 <div class="modal-footer">
 	<div>
-		<button class="btn btn-danger" href ng-click="self.ok()">OK</button>
+		<button class="btn btn-default" href ng-click="self.ok()">OK</button>
 	</div>
 </div>
