ESM-449: update ui side again, hook in on state change and prompt if the data is dirty...

--- a/modules/vcs/client/views/vc-modal-confirm-cancel.html
+++ b/modules/vcs/client/views/vc-modal-confirm-cancel.html
@@ -4,7 +4,7 @@
 </div>
 
 <div class="modal-body">
-    You have unsaved changes. Are you sure you want close with saving?
+    You have unsaved changes. Are you sure you want close without saving?
 </div>
 
 <div class="modal-footer">
@@ -13,4 +13,3 @@
 		<button class="btn btn-danger" href ng-click="self.ok()">Yes</button>
 	</div>
 </div>
-	
