--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -67,7 +67,7 @@ $panel-footer-bg: 			#FFF;
 /* Side Navigation */
 $sidenav-bg: 				#FFF;
 $sidenav-color: 			$link-color;
-$sidenav-width:				20rem;
+$sidenav-width:				18rem;
 
 /* Tables */
 $table-bg: 					#FFF;
@@ -199,6 +199,23 @@ textarea {
 	display: flex;
 	-ms-flex-flow: column nowrap;
 	flex-flow: column nowrap;
+}
+
+.flex-title {
+	@extend .flex-row;
+
+	h2 {
+		@include flex(1 1 auto);
+		margin: 0;
+		padding-top: 1rem;
+		padding-bottom: 1rem;
+		font-size: 1.8rem;
+		font-weight: bold;
+	}
+
+	.actions {
+		@include flex(0 0 auto);
+	}
 }
 
 [ng\:cloak],
@@ -1491,7 +1508,7 @@ tmpl-footer {
 
 	.left-panel {
 		position: relative;
-		width: $left-panel-width;
+		width: $sidenav-width;
 		flex: 0 0 auto;
 		background: $left-panel-bg;
 		box-shadow: 0 0 $left-panel-shadow-width $left-panel-shadow-color;
@@ -2088,7 +2105,7 @@ $sidenav-text-shadow: 0 0 2px #FFF;
 		a {
 			padding: 0.8rem 1.5rem;
 			font-size: 1.3rem;
-			font-weight: bold;
+			font-weight: normal;
 			color: $link-color;
 			text-shadow: $sidenav-text-shadow;
 			border: 1px solid transparent;
@@ -3096,7 +3113,8 @@ $nav-tab-active: $nav-tab-active-color;
 		margin-bottom: -4px;
 
 		> a {
-			padding: 0.5rem 1.5rem;
+			margin: 0;
+			padding: 0.8rem 1.5rem;
 			font-size: 1.4rem;
 			font-weight: bold;
 			color: $nav-tab-inactive-color;
@@ -3678,7 +3696,13 @@ $nav-tab-active: $nav-tab-active-color;
 	left: 0;
 
 	.nav-tabs {
-		margin-bottom: 1rem;
+		border-top: 1px solid #DDD;
+		margin-top: 0;
+		margin-bottom: 1.5rem;
+
+		li {
+			margin-top: 0.5rem;
+		}
 	}
 
 	.comment-title {
@@ -3713,12 +3737,18 @@ $nav-tab-active: $nav-tab-active-color;
 		}
 	}
 
-	.pcp-button-bar {
-		padding-bottom: 1rem;
-	}
-
 	.tab-pane {
+		position: relative;
 		padding: 0;
+	}
+	
+	.pcp-btn-bar {
+		h2 {
+			font-size: 2rem;
+			font-weight: bold;
+			margin-top: 0.8rem;
+			margin-bottom: 0;
+		}
 	}
 }
 
@@ -3742,7 +3772,7 @@ $nav-tab-active: $nav-tab-active-color;
 		td.attachment-col {
 			position: absolute;
 			top: 0.6rem;
-			right: 9.5rem
+			right: 14.5rem;
 		}
 		
 		td.date-col {
@@ -3765,7 +3795,7 @@ $nav-tab-active: $nav-tab-active-color;
 			background: transparent;
 
 			td.attachment-col {
-				right: 9.5rem;
+				right: 14.5rem;
 			}
 			
 			td.date-col {
@@ -3776,11 +3806,13 @@ $nav-tab-active: $nav-tab-active-color;
 	}
 }
 
+
 @media (max-width: 1200px) {
 	.public-comment-period-view {
-		.public-comment-panel {
-			background: transparent;
-			border: none;
+		.tab-pane {
+			.pcp-button-bar {
+				top: -5.5rem;
+			}
 		}
 		
 		.table {
@@ -3799,15 +3831,16 @@ $nav-tab-active: $nav-tab-active-color;
 				}
 			
 				th {
-					margin-right: 0.5rem;
-					margin-bottom: 1rem;
-					padding: 0.6rem 1rem 0.6rem 1rem;
+					margin-top: 0.5rem;
+					margin-bottom: 0.5rem;
+					margin-left: 0.5rem;
+					padding: 0.6rem 0.6rem 0.6rem 1rem;
 					display: block;
 					float: left;
 					text-align: center;
 					background: #FFF;
-					border: 1px solid #DDD !important;
-					border-radius: 4px;
+					border: 1px solid #c8c8c8 !important;
+					border-radius: 3px;
 				}
 			}
 			
@@ -3864,6 +3897,14 @@ $nav-tab-active: $nav-tab-active-color;
 
 @media (min-width: 1200px) {
 	.public-comment-period-view {
+		.tab-pane {
+			.pcp-button-bar {
+				position: absolute;
+				top: -5.5rem;
+				right: 0;
+			}
+		}
+
 		.table {
 			table-layout: fixed;
 			width: 100%;
