--- a/modules/project-comments/client/views/public-comments/list.html
+++ b/modules/project-comments/client/views/public-comments/list.html
@@ -2,7 +2,7 @@
 <div class="img-view-modal modal fade" id="commentModal" role="modal">
 	<div class="modal-header">
 		<button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		<h3 class="modal-title">Comment Volume by Topic</h3>
+		<h3 class="modal-title">Public Comment Volume by Topic</h3>
 	</div>
 	<tmpl-public-comment-chart class="topic-cloud-container"
 		x-refresh="s.refreshVisualization"
@@ -13,6 +13,18 @@
 
 <!-- Temporary fix until we move to angular modals -->
 <div class="temp-overlay"></div>
+
+<div class="flex-title">
+	<h2>Comments</h2>
+	<div class="actions">
+		<button class="btn btn-default btn-sm" ng-if="s.showTopicCloud === false"
+			data-toggle="modal"
+			data-target="#commentModal"
+			data-backdrop="false">Volume by Topic</button>
+		<button class="btn btn-default btn-sm" ng-if="authentication.user"
+			ng-click="s.downloadCommentData()"><span class="glyphicon glyphicon-download-alt"></span><span>Download CSV</span></button>
+	</div>
+</div>
 	
 <div ng-if="s.period.userCan.vetComments">
 	<!-- PROTOTYPE EAO ROW TEMPLATES  -->
@@ -33,16 +45,7 @@
 
 <div class="tab-pane">
 
-	<div class="pcp-button-bar">
-		<button class="btn btn-default btn-sm" ng-if="s.showTopicCloud === false"
-			data-toggle="modal"
-			data-target="#commentModal"
-			data-backdrop="false"><span class="glyphicon glyphicon-new-window"></span><span>Comment Volume by Topic</span></button>
-		<button class="btn btn-default btn-sm" ng-if="authentication.user"
-			ng-click="s.downloadCommentData()"><span class="glyphicon glyphicon-download-alt"></span><span>Download CSV</span></button>
-	</div>
-
-	<div class="public-comment-panel">
+	<div class="public-comment-panel panel panel-default">
 		<table ng-table="s.tableParams" show-filter="true" class="eao-comment-table table table-hover">
 			<tr class="comment-row" ng-repeat="o in $data" ng-click="s.detail(o)">
 				<td class="id-col no-mobile" header-class="'id-col no-mobile'" ng-if="authentication.user" data-title="'ID'" sortable="'commentId'">
@@ -70,7 +73,7 @@
 					<span class="glyphicon glyphicon-paperclip" ng-if="o.publishedDocumentCount > 0" title="{{o.publishedDocumentCount}} attachments available"></span>
 				</td>
 				<td class="date-col" header-class="'date-col'" data-title="'Date Posted'" sortable="'dateAdded'">
-					{{o.dateAdded | date:'MMMM dd, yyyy @ h:mm:ss.sss a'}}
+					{{o.dateAdded | date:'MMM dd, yyyy @ h:mm a'}}
 				</td>
 			</tr>
 			<tr class="no-records" ng-if="!$data || $data.length === 0">
