--- a/modules/vcs/client/views/vc-modal-error.html
+++ b/modules/vcs/client/views/vc-modal-error.html
@@ -1,19 +1,4 @@
-<div class="modal-header">
-	<button class="btn btn-default close" ng-click="self.cancel()"><span aria-hidden="true">×</span></button>
-	<h3 class="modal-title">{{title}}</h3>
-</div>
-
-<div class="modal-body">
-    An error has occurred while trying to process your request.
-	  <!-- Need error messaging here -->
-    <h3>{{self.msg}}</h3>
-    <ul ng-if="self.errors && self.errors.length > 0">
-      <li ng-repeat="x in self.errors">{{x.msg}}</li>
-    </ul>
-</div>
-
-<div class="modal-footer">
-	<div>
-		<button class="btn btn-default" href ng-click="self.ok()">OK</button>
-	</div>
+<div class="alert alert-danger">
+	<button class="close" ng-click="self.cancel()"><span aria-hidden="true">×</span></button>
+	{{self.msg}}
 </div>
